[gd_scene load_steps=3 format=3 uid="uid://c1rwvhccj8sbd"]

[ext_resource type="Script" uid="uid://b3b6cyuhfe42q" path="res://Scripts/Menu/create_new_world_menu.gd" id="1_336xh"]
[ext_resource type="Theme" uid="uid://5uq80ele5x1b" path="res://Assets/main_theme.tres" id="1_rbmno"]

[node name="CreateNewWorldMenu" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.004
anchor_right = 0.671
anchor_bottom = 0.6
offset_left = 0.39199972
offset_top = 5.0
offset_right = 0.0079956055
offset_bottom = 0.19998169
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rbmno")
script = ExtResource("1_336xh")

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "X"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WorldName" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
placeholder_text = "World Name"
alignment = 1
max_length = 50

[node name="CreateNewWorld" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
disabled = true
text = "Create"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/WorldName" to="." method="_on_world_name_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreateNewWorld" to="." method="_on_create_new_world_pressed"]
